 ! html special chars in title caused problmes [Issue #313]
 ! list of pages in category not shown when page had no content [Issue #323]
 + Added <noinclude> and <includeonly> tags
 + Added __NOTOC__ behaviour tag [Issue #331]
 + Extended parser to support "hash tags" for example #REDIRECT
 ! Include should include categories
 
May 2009
--------------------------------------------------------------------------------
 ! Comparing pages didn't work
 ! Some pages couldn't be cached
 
April 2009
--------------------------------------------------------------------------------
 + Rewritten WikiParser (started in March)
 + New Installer code
 ! Don't show Wiki in Admin when disabled
 + Added support for adding variables
 ! Wikilinked images didn't work
 ! Section breaks didn't work
 ! Table of contents wasn't shown
 ! In some cases existing pages was shown with redlink
 ! Unable to create categories
 + Categories now shown on pages

February 2009
--------------------------------------------------------------------------------
 ! Wikiparser lost some raw sections
 ! Wikiparser lost values for numeric parameters
 + Make links to non-existing pages red
 ! Cache wasn't cleared after talk topic was created

January 2009
--------------------------------------------------------------------------------
 + Many code improvements
 + Upload Feature
 + Added more caching features
 + Added functions for creating pages and revisions

December 2008
--------------------------------------------------------------------------------
 ! Missing language string 'wikiAttachmentsDir'
 ! Language string typo 'cannot_wiki_edit_current_page'
 ! Talk form redirecting wrong url
 ! "method" attribute missing for form in page history
 ! Error caused when old revision is not selected
 * Some tweaks to the Special:RecentChanges
 ! url to edit section was wrong
 ! Redirect was broken

November 2008
--------------------------------------------------------------------------------
 ! Redirect to correct case