@@ -1,0 +1,32 @@
+<?php
+/**********************************************************************************
+* WikiSpecialPages.php                                                            *
+***********************************************************************************
+* SMF Wiki                                                                        *
+* =============================================================================== *
+* Software Version:           SMF Wiki 0.1                                        *
+* Software by:                Niko Pahajoki (http://www.madjoki.com)              *
+* Copyright 2008-2009 by:     Niko Pahajoki (http://www.madjoki.com)              *
+* Support, News, Updates at:  http://www.smfarcade.info                           *
+***********************************************************************************
+* This program is free software; you may redistribute it and/or modify it under   *
+* the terms of the provided license as published by Simple Machines LLC.          *
+*                                                                                 *
+* This program is distributed in the hope that it is and will be useful, but      *
+* WITHOUT ANY WARRANTIES; without even any implied warranty of MERCHANTABILITY    *
+* or FITNESS FOR A PARTICULAR PURPOSE.                                            *
+*                                                                                 *
+* See the "license.txt" file for details of the Simple Machines license.          *
+* The latest version can always be found at http://www.simplemachines.org.        *
+***********************************************************************************/
+
+if (!defined('SMF'))
+	die('Hacking attempt...');
+	
+function WikiFileUpload()
+{
+	global $context, $modSettings, $settings, $txt, $user_info, $smcFunc, $sourcedir;
+
+}
+
+?>
