@@ -2,7 +2,7 @@
 [center][color=red][size=16pt][b]SMF Wiki {version}[/b][/size][/color]
 [/center]
 [hr]
-[center][url=http://smfwiki.net]Official website[/url] | [url=http://smfwiki.net/forum/index.php?project=5]Issue Tracker[/url][/center]
+[center][url=http://smfwiki.net]Official website[/url] | [url=http://smfwiki.net/forum/index.php?project=6]Issue Tracker[/url][/center]
 
 [color=red][b][size=12pt]Warning![/size][/b][/color]
 This is an early release of SMF Wiki.
@@ -10,8 +10,15 @@ There maybe bugs that may cause data loss.
 You should report all bugs to our Issue Tracker, feature request are also welcome.
 
 [color=blue][b][size=12pt]Introduction[/size][/b][/color]
-Wiki for SMF 2.0 RC2. Includes "standalone mode" to let Wiki run outside SMF via SSI (SEO-urls for example).
-You can use BBC syntax with added some wikicode such as wikilinks.
+Wiki for SMF 2.0 RC2. Uses BBC-syntax with added some wikicode such as Wiki Links.
+Any BBC-code from SMF works including most of those added by mod.
+Mods that adds Wiki Link type links might cause problems with this mod
 
-[color=blue][b][size=12pt]Support[/size][/b][/color]
-[url=https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=801590]You can support this mod by donating[/url]
+[color=blue][b][size=12pt]Please support development of this modification![/size][/b][/color]
+This modification is free but if you like this mod, please support it by making small donation.
+You can support development of this modification by donating via PayPal, [url=https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=801590]Donate now[/url]
+
+Thank you!
+
+[color=blue][b][size=12pt]Features[/size][/b][/color]
+Includes "standalone mode" to let Wiki run outside SMF via SSI (SEO-urls for example).
